# dynamic-versioning-python

./: .bumpversion.cfg  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
demo/: README.md  pyproject.toml
src/: __init__.py
src/trial/: __init__.py
src/trial/calculator/: operations.py
tests/: test_operations.py
