[project]
name = "dynamic_versioning_python"
version = "0.2.4"
description = "Default template for PDM package"
authors = [
    {name = "Heliya Hasani", email = "heliyahasani@hotmail.com"},
]
dependencies = [
    "setuptools>=72.2.0",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "bump2version>=1.0.1",
]
