[project]
name = "test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Heliya Hasani", email = "heliyahasani@hotmail.com"},
]
dependencies = [
    "dynamic_versioning_python @ git+https://github.com/heliyahasani/dynamic-versioning-python.git@master"
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
